--- a/src/pages/meta/quest.astro
+++ b/src/pages/meta/quest.astro
@@ -22,7 +22,7 @@ const quests = [{
 }]
 
 ---
-<V2Layout landingPageTopMenu={true} cascadeLogoSubtitle="Quest Tasks and their affects">
+<V2Layout landingPageTopMenu={true} subtitle="Quest Tasks and their affects">
   <HeroSection 
     title={"CascadeFund – Quest Task List"}
     subtitle="CascadeFund is a quest based social network for the open-source communities. We as CascadeFund prioritize the transparency. Every quest (task) is public, trackable — so maintainers, contributors and influencers could verify and check how the rating of the project was presented."
