--- a/src/layouts/LandingLayout.astro
+++ b/src/layouts/LandingLayout.astro
@@ -3,27 +3,17 @@ import { ClientRouter } from "astro:transitions";
 import "@/styles/global.css";
 import Header from "@/components/utilitified_decorations/Header.astro";
 import Footer from "@/components/utilitified_decorations/Footer.astro";
-import type {
-  Navigation,
-  NavigationName,
-} from "@/components/utilitified_decorations/HeaderRight";
+import type { ItemName } from "@/components/utilitified_decorations/LandingNavbar.astro";
 
 interface Props {
-  cascadeLogoSubtitle?: string;
+  subtitle?: string;
   landingPageTopMenu?: boolean;
   additional?: any[];
-
-  activeLink?: NavigationName;
-  hideLinks?: NavigationName[];
-  replacement?: Navigation;
+  active?: ItemName;
+  hideLinks?: ItemName[];
 }
-const {
-  landingPageTopMenu,
-  cascadeLogoSubtitle,
-  additional,
-  activeLink,
-  hideLinks,
-} = Astro.props;
+const { landingPageTopMenu, subtitle, additional, active, hideLinks } =
+  Astro.props;
 ---
 
 <!doctype html>
@@ -36,15 +26,17 @@ const {
     <title>CascadeFund</title>
     <ClientRouter />
   </head>
-  <body class="min-h-screen bg-gray-200"></body><Header
-    activeLink={activeLink}
-    landingPageTopMenu={landingPageTopMenu}
-    cascadeLogoSubtitle={cascadeLogoSubtitle}
-    additional={additional}
-    hideLinks={hideLinks}
-  />
-  <slot />
-  <Footer />
+  <body class="min-h-screen bg-gray-200">
+    <Header
+      active={active}
+      landingPageTopMenu={landingPageTopMenu}
+      subtitle={subtitle}
+      additional={additional}
+      hideLinks={hideLinks}
+    />
+    <slot />
+    <Footer />
+  </body>
 </html>
 
 <style is:global>
