--- a/src/layouts/PanelViewLayout.astro
+++ b/src/layouts/PanelViewLayout.astro
@@ -3,22 +3,16 @@ import { ClientRouter } from "astro:transitions";
 import "@/styles/global.css";
 import Header from "@/components/utilitified_decorations/Header.astro";
 import Footer from "@/components/utilitified_decorations/Footer.astro";
-import type {
-  Navigation,
-  NavigationName,
-} from "@/components/utilitified_decorations/HeaderRight";
 
 interface Props {
-  cascadeLogoSubtitle?: string;
+  subtitle?: string;
   landingPageTopMenu?: boolean;
   additional?: any[];
 
-  activeLink?: NavigationName;
-  hideLinks?: NavigationName[];
-  replacement?: Navigation;
+  active?: string;
+  hideLinks?: string[];
 }
-const { landingPageTopMenu, cascadeLogoSubtitle, additional, hideLinks } =
-  Astro.props;
+const { landingPageTopMenu, subtitle, additional, hideLinks } = Astro.props;
 ---
 
 <!doctype html>
@@ -33,7 +27,7 @@ const { landingPageTopMenu, cascadeLogoSubtitle, additional, hideLinks } =
   </head>
   <body class="min-h-screen bg-gray-200"></body><Header
     landingPageTopMenu={landingPageTopMenu}
-    cascadeLogoSubtitle={cascadeLogoSubtitle}
+    subtitle={subtitle}
     additional={additional}
     hideLinks={hideLinks}
   />
