--- a/src/pages/data/project/blockchain.astro
+++ b/src/pages/data/project/blockchain.astro
@@ -1,16 +1,19 @@
 ---
 import V2Layout from "@/layouts/PanelViewLayout.astro";
-import { NavigationName, type Navigation } from "@/components/utilitified_decorations/HeaderRight";
-import NavLabelElement from '@/components/utilitified_decorations/NavigatingItem'
-export const replacement: Navigation = {};
-replacement[NavigationName.ProjectName] = await NavLabelElement({children: "Add New Project", active: true})
+import { ItemName } from "@/components/utilitified_decorations/WorkNavbar.astro";
+import NavLabelElement from "@/components/utilitified_decorations/NavigatingItem";
+export const replacement = [
+      await NavLabelElement({
+            children: "Add New Project",
+            active: true,
+      }),
+];
 
-import ConnectionCard from '@/components/project/BlockchainRecordingPanel'
-import InfoCard from '@/components/project/BlockchainRecordingHowtoPanel'
-
+import ConnectionCard from "@/components/project/BlockchainRecordingPanel";
+import InfoCard from "@/components/project/BlockchainRecordingHowtoPanel";
 ---
 
-<V2Layout activeLink={NavigationName.ProjectName} replacement={replacement}>
+<V2Layout activeLink={ItemName.ProjectName} additional={replacement}>
       <ConnectionCard slot="center" />
       <InfoCard slot="right" />
 </V2Layout>
