--- a/src/pages/data/project/completed.astro
+++ b/src/pages/data/project/completed.astro
@@ -1,16 +1,21 @@
 ---
 import V2Layout from "@/layouts/PanelViewLayout.astro";
-import { NavigationName, type Navigation } from "@/components/utilitified_decorations/HeaderRight";
-import NavLabelElement from '@/components/utilitified_decorations/NavigatingItem'
+import {
+      ItemName,
+      type Navigation,
+} from "@/components/utilitified_decorations/WorkNavbar.astro";
+import NavLabelElement from "@/components/utilitified_decorations/NavigatingItem";
 export const replacement: Navigation = {};
-replacement[NavigationName.ProjectName] = await NavLabelElement({children: "Add New Project", active: true})
+replacement[ItemName.ProjectName] = await NavLabelElement({
+      children: "Add New Project",
+      active: true,
+});
 
-import ConnectionCard from '@/components/project/AddingCompletionPanel'
-import InfoCard from '@/components/project/CompletionTxInfoPanel'
-
+import ConnectionCard from "@/components/project/AddingCompletionPanel";
+import InfoCard from "@/components/project/CompletionTxInfoPanel";
 ---
 
-<V2Layout activeLink={NavigationName.ProjectName} replacement={replacement}>
+<V2Layout activeLink={ItemName.ProjectName} replacement={replacement}>
       <ConnectionCard slot="center" />
       <InfoCard slot="right" />
 </V2Layout>
