--- a/src/pages/login/callback.astro
+++ b/src/pages/login/callback.astro
@@ -1,18 +1,21 @@
 ---
-import V2Layout from "@/layouts/PanelViewLayout.astro"
-import { LandingRightMenu } from "@/components/utilitified_decorations/HeaderRight";
+import V2Layout from "@/layouts/PanelViewLayout.astro";
+import { LandingRightMenu } from "@/components/utilitified_decorations/LandingNavbar.astro";
 
-import Loading from '@/components/utilitified_decorations/LoadingPanel'
+import Loading from "@/components/utilitified_decorations/LoadingPanel";
 
 const sectionInfo = {
   title: "Successful Authentication",
   children: "Please wait for automatic redirection",
-  gotoLink: '/login/getting-started',
-  gotoLabel: 'Getting Started'
-}
-
+  gotoLink: "/login/getting-started",
+  gotoLabel: "Getting Started",
+};
 ---
 
-<V2Layout landingPageTopMenu={true} hideLinks={LandingRightMenu} cascadeLogoSubtitle="Wait a bit please...">
-        <Loading slot="center" client:load {...sectionInfo} />
+<V2Layout
+  landingPageTopMenu={true}
+  hideLinks={LandingRightMenu}
+  subtitle="Wait a bit please..."
+>
+  <Loading slot="center" client:load {...sectionInfo} />
 </V2Layout>
