--- a/src/pages/maintainer/balance.astro
+++ b/src/pages/maintainer/balance.astro
@@ -1,15 +1,14 @@
 ---
 import V2Layout from "@/layouts/PanelViewLayout.astro";
-import Panel from "@/components/utilitified_decorations/MenuPanel"
-import { NavigationName } from "@/components/utilitified_decorations/HeaderRight";
+import Panel from "@/components/utilitified_decorations/MenuPanel";
+import { ItemName } from "@/components/utilitified_decorations/WorkNavbar.astro";
 
-import BalanceCard from '@/components/maintainer/BalancePanel'
-import TransactionsCard from '@/components/maintainer/RecentTransactionPanel'
-
+import BalanceCard from "@/components/maintainer/BalancePanel";
+import TransactionsCard from "@/components/maintainer/RecentTransactionPanel";
 ---
 
-<V2Layout activeLink={NavigationName.ProjectName}>
-            <Panel activeMenuItem="balance" slot="left" />
-            <BalanceCard slot="center" />
+<V2Layout activeLink={ItemName.ProjectName}>
+      <Panel activeMenuItem="balance" slot="left" />
+      <BalanceCard slot="center" />
       <TransactionsCard slot="center" />
 </V2Layout>
