--- a/src/layouts/PanelViewLayout.astro
+++ b/src/layouts/PanelViewLayout.astro
@@ -25,7 +25,7 @@ const { landingPageTopMenu, subtitle, additional, hideLinks } = Astro.props;
     <title>CascadeFund</title>
     <ClientRouter />
   </head>
-  <body class="min-h-screen bg-gray-200"></body><Header
+  <body class="min-h-screen bg-gray-200 pt-14"></body><Header
     landingPageTopMenu={landingPageTopMenu}
     subtitle={subtitle}
     additional={additional}
