--- a/src/components/utilitified_decorations/Logo.astro
+++ b/src/components/utilitified_decorations/Logo.astro
@@ -28,7 +28,7 @@ const { subtitle, className } = Astro.props;
       class="w-full h-full"
     />
   </div>
-  <div class="flex flex-col">
+  <div class="flex-col hidden md:flex">
     <h1 class="text-xl mt-0">CascadeFund</h1>
     {
       subtitle && (
