--- a/src/layouts/LandingLayout.astro
+++ b/src/layouts/LandingLayout.astro
@@ -26,7 +26,7 @@ const { landingPageTopMenu, subtitle, additional, active, hideLinks } =
     <title>CascadeFund</title>
     <ClientRouter />
   </head>
-  <body class="min-h-screen bg-gray-200">
+  <body class="min-h-screen bg-gray-200 pt-14">
     <Header
       active={active}
       landingPageTopMenu={landingPageTopMenu}
