--- a/src/components/utilitified_decorations/Header.astro
+++ b/src/components/utilitified_decorations/Header.astro
@@ -26,7 +26,7 @@ const {
   class={`h-14 -pt-2 bg-white shadow-sm border-b border-gray-200 px-${GridStyle.section.padding!.x} fixed top-0 right-0 left-0 z-10`}
 >
   <Row className="grid-cols-2" centerClassName="hidden lg:flex">
-    <CascadeFundLogo slot="left" subtitle={subtitle} />
+    <CascadeFundLogo slot="left">{subtitle}</CascadeFundLogo>
 
     <div slot="center" class="flex items-center justify-between">
       <Navbar
