Move sections into layouts

--- a/src/layouts/sections/HeroSection.astro
+++ b/src/layouts/sections/HeroSection.astro
@@ -1,6 +1,6 @@
 ---
 import { type SectionProps, SectionBgType } from "@/types/eventTypes";
-import Section from "./Section.astro";
+import Section from "./BaseSection.astro";
 
 type Props = SectionProps;
 
