--- a/src/layouts/sections/HorizontalPanelsSection.astro
+++ b/src/layouts/sections/HorizontalPanelsSection.astro
@@ -5,7 +5,7 @@ import type { SectionProps } from "@/types/eventTypes";
 import TitledInfoPanel from "@/components/utilitified_decorations/TitledInfoPanel";
 import type { RoleCardProps } from "@/components/RoleCard";
 import C from "@/components/RoleCard";
-import Section from "./Section.astro";
+import Section from "./BaseSection.astro";
 
 type Props = SectionProps & { cols?: number };
 
