--- a/src/layouts/sections/BaseSection.astro
+++ b/src/layouts/sections/BaseSection.astro
@@ -1,8 +1,7 @@
 ---
 import Button from "@/components/Button";
 import { type SectionProps, SectionBgType } from "@/types/eventTypes";
-import Icon from "./SectionIcon.astro";
-import DynamicReactImporter from "./ReactComponentImporter";
+import DynamicReactImporter from "@/components/ReactComponentImporter";
 
 type Props = SectionProps;
 
