--- a/src/pages/maintainer/work.astro
+++ b/src/pages/maintainer/work.astro
@@ -4,17 +4,37 @@ import Panel from "@/components/utilitified_decorations/MenuPanel";
 
 import { ItemName } from "@/components/utilitified_decorations/WorkNavbar.astro";
 
-import TaskNotice from "@/components/maintainer/QuestHowtoPanel";
+import InfoPanel from "@/components/InfoPanel2.astro";
 import IssuesNotice from "@/components/maintainer/IssueHowtoPanel";
-import TasksSection from "@/components/maintainer/QuestPanel";
+import TasksSection from "@/components/quest/QuestPanel";
 import IssuesSection from "@/components/maintainer/IssueListPanel";
 import RoadmapSection from "@/components/maintainer/RoadmapPanel";
 ---
 
 <V2Layout active={ItemName.ProjectName}>
   <Panel activeMenuItem="work" slot="left" />
-  <TasksSection slot="center" />
-  <TaskNotice slot="right" />
+  <TasksSection slot="center" client:load />
+  <InfoPanel
+    slot="right"
+    title="How to work with the tasks?"
+    icon="info"
+    actions={[
+      {
+        children: "Learn more",
+        href: "/meta/work",
+      },
+    ]}
+  >
+    <ul class="text-xs text-gray-600 space-y-1">
+      <li>
+        • <strong
+          >CascadeFund is the only management platform that avoids burnout</strong
+        ><br />
+        Therefore, it's a quest based management platform.
+      </li>
+      <li>• The icons next to each task helps to identify it.</li>
+    </ul>
+  </InfoPanel>
   <IssuesNotice slot="left" />
   <IssuesSection slot="center" />
   <RoadmapSection slot="right" />
